# async-sync-python-libs

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/priori_way_with_types/: router.py
src/priori_way_without_types/: router.py
src/unasync_way/: __init__.py  router.py  utils.py
src/unasync_way/_async/: client.py
src/unasync_way/_sync/: client.py
